--- a/user/files/.config/compton.conf
+++ b/user/files/.config/compton.conf
@@ -207,7 +207,7 @@ paint-on-overlay = true;
 # performance. This should not be used with --vsync drm/opengl/opengl-oml as
 # they essentially does --sw-opti's job already, unless you wish to specify a
 # lower refresh rate than the actual value.
-sw-opti = false;
+sw-opti = true;
 
 # Unredirect all windows if a full-screen opaque window is detected, to maximize
 # performance for full-screen windows, like games. Known to cause flickering
