--- a/user/scripts/Makefile
+++ b/user/scripts/Makefile
@@ -1,8 +1,34 @@
+.DEFAULT_GOAL=all
 
-vim:
-	./setup_vim.sh
+# ----------------------------------------------------------------------------------------------------
+# ViM
+.PHONY: vim-base
+vim-base:
+	mkdir -pv ~/.vim/view
+	mkdir -pv ~/.vim/undodir
+	rm -rf ~/.vim/bundle/Vundle.vim
+	git clone -q https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim
+	vim +PluginInstall +qall
 
+.PHONY: vim-vimproc
+vim-vimproc: vim-base
+	cd ~/.vim/bundle/vimproc.vim; \
+	make
 
-all: vim
+.PHONY: vim-ycm
+vim-ycm: vim-base
+	cd ~/.vim/bundle/YouCompleteMe; \
+	./install.sh --clang-completer
 
-.PHONY: vim all
+.PHONY: setup-vim
+setup-vim: vim-base vim-vimproc vim-ycm
+
+# ----------------------------------------------------------------------------------------------------
+.PHONY: download-gtk-theme
+download-gtk-theme:
+	mkdir -pv ~/.themes
+	git clone -q https://github.com/petrucci4prez/BlackIce ~/.themes/BlackIce
+
+# ----------------------------------------------------------------------------------------------------
+.PHONY: all
+all: setup-vim download-gtk-theme
