--- a/user/scripts/Makefile
+++ b/user/scripts/Makefile
@@ -6,28 +6,23 @@
 vim-base:
 	mkdir -pv ~/.vim/view
 	mkdir -pv ~/.vim/undodir
-	git clone -q https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim
-	vim +PluginInstall +qall
-
-.PHONY: vim-vimproc
-vim-vimproc: vim-base
-	cd ~/.vim/bundle/vimproc.vim; \
-	make
-
-.PHONY: vim-ycm
-vim-ycm: vim-base
-	cd ~/.vim/bundle/YouCompleteMe; \
-	./install.sh --clang-completer
+	curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
+		https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+	vim +PlugInstall +qall
 
 .PHONY: setup-vim
-setup-vim: vim-base vim-vimproc vim-ycm
+setup-vim: vim-base
+
 
 # ----------------------------------------------------------------------------------------------------
+# GTK Theme
 .PHONY: download-gtk-theme
 download-gtk-theme:
 	mkdir -pv ~/.themes
 	git clone -q https://github.com/petrucci4prez/BlackIce ~/.themes/BlackIce
 
+
 # ----------------------------------------------------------------------------------------------------
+#  All
 .PHONY: all
 all: setup-vim download-gtk-theme
