--- a/user/files/.config/termite/config
+++ b/user/files/.config/termite/config
@@ -7,7 +7,7 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Source Code Pro for Powerline 9
+font = Inconsolata for Powerline, Semibold 11
 scrollback_lines = 1000
 search_wrap = true
 #icon_name = terminal
