Small updates; + rygel.conf

--- a/user/files/.i3/config
+++ b/user/files/.i3/config
@@ -159,6 +159,8 @@ new_float pixel 0
 for_window [class="^.*"] border pixel 1
 for_window [class="Player"] floating enable
 
+popup_during_fullscreen smart
+
 # border colors           border      background      text        indicator
 client.focused            #9999aa     $color_border   #ffffff     #ff005b
 client.unfocused          #1C1C1C     #1C1C1C         #ffffff     #1C1C1C
