--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,9 +1,8 @@
 [Settings]
-gtk-theme-name=BlackIce
-gtk-icon-theme-name=FlatWoken
+# gtk-theme-name=BlackIce
+# gtk-icon-theme-name=FlatWoken
 gtk-font-name=Droid Sans 11
 gtk-cursor-theme-name=Pulse-Glass
-gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
