--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -3,14 +3,14 @@
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font xft:Droid Sans Mono 10
+font xft:Meslo LG S DZ for Powerline 11
 
 
 # ----------------------------------------------------------------------------------------------------
 # Programs
 # ----------------------------------------------------------------------------------------------------
 set $locker i3lock -b -d -I 5 -c 000000
-set $dmenu j4-dmenu-desktop --display-binary --dmenu='dmenu -i -fn "Droid Sans Mono-10" -p "$" -l 5 -hist ~/.dmenu-history'
+set $dmenu j4-dmenu-desktop --display-binary --dmenu='dmenu -i -fn "Meslo LG S DZ for Powerline-11" -p "$" -l 5 -hist ~/.dmenu-history'
 
 set $volume_up amixer -D pulse set Master 5%+ unmute && play -q /usr/share/sounds/freedesktop/stereo/audio-volume-change.oga
 set $volume_down amixer -D pulse set Master 5%- unmute && play -q /usr/share/sounds/freedesktop/stereo/audio-volume-change.oga
