- Meslo everywhere was a mistake; + Small font tweaks

--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-# gtk-theme-name=BlackIce
+gtk-theme-name=numix-gtk-theme-2.5
 # gtk-icon-theme-name=FlatWoken
-gtk-font-name=Meslo LG S DZ for Powerline 11
+gtk-font-name=Droid Sans 10.8
 gtk-cursor-theme-name=Pulse-Glass
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
