--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,6 +1,3 @@
-# i3 config file (v4)
-# Please see http://i3wm.org/docs/userguide.html for a complete reference!
-
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font xft:Meslo LG S DZ for Powerline 10.8
@@ -139,17 +136,17 @@ bindsym $super+$mod+l exec --no-startup-id $locker
 # ----------------------------------------------------------------------------------------------------
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-set $color_background #1a1a1a
-set $color_border     #ff8400
 bar {
     status_command python ~/.config/i3/scripts/i3status.py
-    position       top
+    position top
     colors {
-        background $color_background
-        statusline $color_border
-
-        # colorclass      <border>      <background>       <text>
-        focused_workspace $color_border $color_background  #FFFFFF
+        separator            #928374
+        background           #282828
+        statusline           #ebdbb2
+        focused_workspace    #689d6a   #689d6a   #282828
+        active_workspace     #1d2021   #1d2021   #928374
+        inactive_workspace   #32302f   #32302f   #928374
+        urgent_workspace     #cc241d   #cc241d   #ebdbb2
     }
 }
 
@@ -162,10 +159,10 @@ for_window [class="Player"] floating enable
 popup_during_fullscreen smart
 
 # border colors           border      background      text        indicator
-client.focused            #9999aa     $color_border   #ffffff     #ff005b
-client.unfocused          #1C1C1C     #1C1C1C         #ffffff     #1C1C1C
-client.urgent             #990000     #990000         #ffffff     #990000
-client.focused_inactive   #1C1C1C     #1C1C1C         #ffffff     #1C1C1C
+client.focused           #689d6a   #689d6a   #282828   #282828
+client.focused_inactive  #1d2021   #1d2021   #928374   #282828
+client.unfocused         #32302f   #32302f   #928374   #282828
+client.urgent            #cc241d   #cc241d   #ebdbb2   #282828
 
 
 # ----------------------------------------------------------------------------------------------------
