--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -10,49 +10,46 @@ clickable_url = true
 font = Meslo LG S DZ for Powerline 10.8
 scrollback_lines = 1000
 search_wrap = true
-#icon_name = terminal
-#geometry = 640x480
-
-# "system", "on" or "off"
 cursor_blink = system
-
-# "block", "underline" or "ibeam"
 cursor_shape = block
-
-# $BROWSER is used by default
-#browser = firefox
-
-# set size hints for the window
-#size_hints = false
-
-# emit escape sequences for other keys modified by Control
-#modify_other_keys = false
+size_hints = true
 
 [colors]
-# Base16 Isotope
-# Scheme: Jan T. Sott
+# Gruvbox
+background = #1d2021
+foreground = #ebdbb2
+foreground_bold = #ebdbb2
 
-foreground      = #d0d0d0
-foreground_bold = #d0d0d0
-cursor          = #d0d0d0
-background      = rgba(0, 0, 0, 0.9)
+# dark0 + gray
+color0 = #282828
+color8 = #928374
 
-# 16 color space
-color0  = #000000
-color1  = #ff0000
-color2  = #33ff00
-color3  = #ff0099
-color4  = #0066ff
-color5  = #cc00ff
-color6  = #00ffff
-color7  = #d0d0d0
-color8  = #808080
-color9  = #ff0000
-color10 = #33ff00
-color11 = #ff0099
-color12 = #0066ff
-color13 = #cc00ff
-color14 = #00ffff
-color15 = #ffffff
+# neutral_red + bright_red
+color1 = #cc241d
+color9 = #fb4934
+
+# neutral_green + bright_green
+color2 = #98971a
+color10 = #b8bb26
+
+# neutral_yellow + bright_yellow
+color3 = #d79921
+color11 = #fabd2f
+
+# neutral_blue + bright_blue
+color4 = #458588
+color12 = #83a598
+
+# neutral_purple + bright_purple
+color5 = #b16286
+color13 = #d3869b
+
+# neutral_aqua + faded_aqua
+color6 = #689d6a
+color14 = #8ec07c
+
+# light4 + light1
+color7 = #a89984
+color15 = #ebdbb2
 
 # vim: ft=dosini cms=#%s
