--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=numix-gtk-theme-2.5
+gtk-theme-name=Arc-Dark
 # gtk-icon-theme-name=FlatWoken
 gtk-font-name=Droid Sans 10.8
 gtk-cursor-theme-name=Pulse-Glass
