+ Fixed some tearing by tweaking compton + 5% brightness {inc,dec}rements

--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -213,7 +213,7 @@ sw-opti = true;
 # performance for full-screen windows, like games. Known to cause flickering
 # when redirecting/unredirecting windows. paint-on-overlay may make the
 # flickering less obvious.
-unredir-if-possible = true;
+# unredir-if-possible = true;
 
 # Specify a list of conditions of windows that should always be considered
 # focused.
