--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -37,6 +37,7 @@ for_window [class="^.*"] border pixel 2
 for_window [class="Player"] floating enable
 
 popup_during_fullscreen smart
+hide_edge_borders smart
 
 
 ####################################################################################################
