:zap: Added some transparency to termite.

--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -16,7 +16,8 @@ size_hints = true
 
 [colors]
 # Gruvbox
-background = #1d2021
+#background = #1d2021
+background = rgba(29, 32, 33, 0.8)
 foreground = #ebdbb2
 foreground_bold = #ebdbb2
 
