:zap: Lowered redshift night temperature

--- a/redshift/.config/redshift.conf
+++ b/redshift/.config/redshift.conf
@@ -1,6 +1,5 @@
 [redshift]
 transition=1
-;brightness-day=0.6
-;brightness-night=0.4
 location-provider=geoclue2
 adjustment-method=randr
+temp-night=3400
