:zap: Removed replaygain plugin

--- a/beets/.config/beets/config.yaml
+++ b/beets/.config/beets/config.yaml
@@ -1,12 +1,8 @@
-plugins: chroma fromfilename fetchart ftintitle lastgenre lyrics mbsync metasync replaygain scrub missing
+plugins: chroma fromfilename fetchart ftintitle lastgenre lyrics mbsync metasync scrub missing
 
 ui:
     color: yes
 
 import:
     group_albums: yes
-
-replaygain:
-    backend: gstreamer
-
 
