--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -7,7 +7,7 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Meslo LG S DZ for Powerline 9.8
+font = Meslo LG S DZ 10
 scrollback_lines = 1000
 search_wrap = true
 cursor_blink = system
