--- a/rofi/.config/rofi/config
+++ b/rofi/.config/rofi/config
@@ -3,7 +3,7 @@ rofi.opacity:                        100
 rofi.width:                          50
 rofi.lines:                          10
 rofi.columns:                        1
-rofi.font:                           Meslo LG S DZ for Powerline 10.8
+rofi.font:                           Meslo LG S DZ 10.8
 rofi.color-normal:                   #282828,#ebdbb2,#282828,#689d6a,#282828
 rofi.color-urgent:                   #282828,#ebdbb2,#282828,#689d6a,#282828
 rofi.color-active:                   #282828,#ebdbb2,#282828,#689d6a,#282828
