--- a/neovim/.config/nvim/coc-settings.json
+++ b/neovim/.config/nvim/coc-settings.json
@@ -1,9 +1,16 @@
 {
+  "coc.source.emoji.filetypes": [
+      "markdown",
+      "gitcommit"
+  ],
+
   "diagnostic.virtualText": true,
   "diagnostic.virtualTextLines": 1,
+
   "python.autoComplete.addBrackets": true,
-  "suggest.noselect":false,
-  "suggest.triggerAfterInsertEnter": true,
+
+  "suggest.minTriggerInputLength": 2,
+  "suggest.noselect": false,
 
   "languageserver": {
     "ccls": {
