--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,32 +1,103 @@
 ####################################################################################################
-##                                      ~/.config/i3/config                                       ##
-####################################################################################################
-
-
-####################################################################################################
 ##                                           Appearance                                           ##
 ####################################################################################################
-font xft:Meslo LG S DZ 10.8
+#
+# Default color number meaning (obviously, might not hold depending on color scheme):
+#
+#     (usually same as 0):  background
+#     (usually same as 15): foreground
+#
+#     0: black  | 8:  bright-black
+#     1: red    | 9:  bright-red
+#     2: green  | 10: bright-green
+#     3: yellow | 11: bright-yellow
+#     4: blue   | 12: bright-blue
+#     5: purple | 13: bright-purple
+#     6: cyan   | 14: bright-cyan
+#     7: white  | 15: bright-white
+#
+# Fallback color scheme based on gruvbox color palette:
+#
+#     background hard contrast:   #1d2021
+#     background medium contrast: #282828
+#     background soft contrast:   #32302f
+#
+#     background: #1d2021
+#     foreground: #ebdbb2
+#
+#     0: #282828 | 8:  #928374
+#     1: #cc241d | 9:  #fb4934
+#     2: #98971a | 10: #b8bb26
+#     3: #d79921 | 11: #fabd2f
+#     4: #458588 | 12: #83a598
+#     5: #b16286 | 13: #d3869b
+#     6: #689d6a | 14: #8ec07c
+#     7: #a89984 | 15: #ebdbb2
+#
+font xft:Fira Code Semibold 10
 
-# colorclass             border   background   text     indicator
-client.focused           #689d6a  #689d6a      #282828  #282828
-client.focused_inactive  #1d2021  #1d2021      #928374  #282828
-client.unfocused         #32302f  #32302f      #928374  #282828
-client.urgent            #cc241d  #cc241d      #ebdbb2  #282828
+# Client colors
+set_from_resource $focused_border     i3wm.color6 #689d6a
+set_from_resource $focused_background i3wm.color6 #689d6a
+set_from_resource $focused_text       i3wm.color0 #282828
+set_from_resource $focused_indicator  i3wm.color0 #282828
+
+set_from_resource $focusedi_border     i3wm.background #1d2021
+set_from_resource $focusedi_background i3wm.background #1d2021
+set_from_resource $focusedi_text       i3wm.color8 #928374
+set_from_resource $focusedi_indicator  i3wm.color0 #282828
+
+set_from_resource $unfocused_border     i3wm.background #32302f
+set_from_resource $unfocused_background i3wm.background #32302f
+set_from_resource $unfocused_text       i3wm.color8     #928374
+set_from_resource $unfocused_indicator  i3wm.color0     #282828
+
+set_from_resource $urgent_border     i3wm.color1  #cc241d
+set_from_resource $urgent_background i3wm.color1  #cc241d
+set_from_resource $urgent_text       i3wm.color15 #ebdbb2
+set_from_resource $urgent_indicator  i3wm.color0  #282828
+
+# colorclass            border            background            text            indicator
+client.focused          $focused_border   $focused_background   $focused_text   $focused_indicator
+client.focused_inactive $focusedi_border  $focusedi_background  $focusedi_text  $focusedi_indicator
+client.unfocused        $unfocused_border $unfocused_background $unfocused_text $unfocused_indicator
+client.urgent           $urgent_border    $urgent_background    $urgent_text    $urgent_indicator
+
+
+# i3 bar colors
+set_from_resource $bar_background i3wm.color0  #282828
+set_from_resource $bar_statusline i3wm.color15 #ebdbb2
+set_from_resource $bar_separator  i3wm.color8  #928374
+
+set_from_resource $fworkspace_border     i3wm.color6  #689d6a
+set_from_resource $fworkspace_background i3wm.color6  #689d6a
+set_from_resource $fworkspace_text       i3wm.color0  #282828
+
+set_from_resource $aworkspace_border     i3wm.background #1d2021
+set_from_resource $aworkspace_background i3wm.background #1d2021
+set_from_resource $aworkspace_text       i3wm.color8     #928374
+
+set_from_resource $iworkspace_border     i3wm.background #32302f
+set_from_resource $iworkspace_background i3wm.background #32302f
+set_from_resource $iworkspace_text       i3wm.color8     #928374
+
+set_from_resource $uworkspace_border     i3wm.color1  #cc241d
+set_from_resource $uworkspace_background i3wm.color1  #cc241d
+set_from_resource $uworkspace_text       i3wm.color15 #ebdbb2
 
 bar {
     status_command python ~/.config/i3/scripts/i3status.py
     position top
     colors {
-        background           #282828
-        statusline           #ebdbb2
-        separator            #928374
+        background           $bar_background
+        statusline           $bar_statusline
+        separator            $bar_separator
 
-        # colorclass         border    background  text
-        focused_workspace    #689d6a   #689d6a     #282828
-        active_workspace     #1d2021   #1d2021     #928374
-        inactive_workspace   #32302f   #32302f     #928374
-        urgent_workspace     #cc241d   #cc241d     #ebdbb2
+        # colorclass       border             background             text
+        focused_workspace  $fworkspace_border $fworkspace_background $fworkspace_text
+        active_workspace   $aworkspace_border $aworkspace_background $aworkspace_text
+        inactive_workspace $iworkspace_border $iworkspace_background $iworkspace_text
+        urgent_workspace   $uworkspace_border $uworkspace_background $uworkspace_text
     }
 }
 
