--- a/rofi/.config/rofi/config
+++ b/rofi/.config/rofi/config
@@ -3,7 +3,7 @@ rofi.opacity:                        100
 rofi.width:                          50
 rofi.lines:                          10
 rofi.columns:                        1
-rofi.font:                           Meslo LG S DZ 10.8
+rofi.font:                           Fira Code 10
 rofi.color-normal:                   #282828,#ebdbb2,#282828,#689d6a,#282828
 rofi.color-urgent:                   #282828,#ebdbb2,#282828,#689d6a,#282828
 rofi.color-active:                   #282828,#ebdbb2,#282828,#689d6a,#282828
@@ -11,7 +11,7 @@ rofi.color-window:                   #282828,#ebdbb2
 rofi.bw:                             1
 rofi.location:                       0
 rofi.padding:                        5
-rofi.yoffset:                        0
+rofi.yoffset:                        -118
 rofi.xoffset:                        0
 rofi.fixed-num-lines:                false
 rofi.terminal:                       rofi-sensible-terminal
